# feishu-hr-translator

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  MCP_SERVER_CREATED.md  README.md  README_WEB.md  call_qwen.ps1  create-deploy-package.ps1  create-deploy-package.sh  demo.py  requirements-web.txt  requirements.txt  send_webhook.py  test_login.py  verify_qwen.py
.claude/: QUICK_START.md  README.md  settings.local.json
.claude/agents/: feishu-optimizer.md
backend/: database.py  web_main.py
backend/api/: auth.py  dashboard.py  schemas.py
backend/auth/: __init__.py  jwt_handler.py  password.py
backend/models/: __init__.py  user.py
backend/services/: __init__.py  report_stats.py
deploy/: .env.production  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FILES_TO_COPY.md  QUICK_REFERENCE.md  README.md  check-health.sh  deploy.sh  docker-compose.production.yml  docker-compose.yml  nginx.conf  update.sh
docs/: WEB_UI_DESIGN.md  WEB_UI_QUICKSTART.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
mcp_servers/: .dockerignore  DISTRIBUTION.md  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  SHARING_GUIDE.md  __init__.py  docker-compose.yml  llm_translator.py  mcp_config.json  pyproject.toml
scripts/: create_admin.py  package_mcp_server.bat  package_mcp_server.ps1
src/: config.py  main.py  schemas.py
src/ai/: qwen.py
src/feishu/: api_client.py  cards.py  report_fetch.py  webhook.py
src/okr/: source.py  sync_job.py
tests/: test_end_to_end.py  test_period.py  test_qwen_schema.py
(+25 files in other folders)
